--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Changing font colors: plus Virginia Beach trivia!</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/jpg" href="img/code-icon.png"/>
   <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 
